05-July-2013:
============
+ Exception now thrown when calling a method on a closed Group().
! Proper exception is now thrown if group.writeToFile() is called on an existing file.

06-06-2013:
===========
+- at() in Table and TableView is now deprecated. Use get() instead.
+  added SharedGroup::close() method which will do a rollback() if needed. 
   Meant to be used in a finally {} clause after a transaction.

16-05-2013:
===========
* Removing shell scripts for compiling examples (ant will also be installed).

07-05-2013:
===========
! BUGFIX: Removed memory leak, which occurred when creating a Group object.


03-05-2013:
===========
+ Added Table::count() methods and Table::lookup() (still missing documentation..)
+ Added QuickBenchmark example

03-03-2013:
===========
+ Added Table::addColumn(), renameColumn(), removeColumn()

??
==
- Renamed Group::getTableCount() to size()
- Renamed TableBase to Table, TableViewBase to TableView
+ Added support for Float and Double

18-12-2012:
===========
+ Added TableBase: insert(), add(), set() which can insert/add/set all values for a row.
- Deprecated use of field based insert*() methods.

27-11-2012:
===========
+ Added ReadTransactions class and testcases for WriteTransactions
+ Added TableViewBase:Average support

15-11-2012:
===========
+  Changed multiple methods in QueryBase to not use TableBase as parameter.
+  Added TableBase where() method.

8-10-2012:
==========
+	Added 'TableQuery: tableview(TableViewBase tv)' for querying TableViews
+	average() fixed to return correct double.
+	Added 'TableBase: distinct()' to return a distinct TableView.

6-9-2012:
=========
Table:
+	void removeLast()
+	ColumnType getMixedType(long columnIndex, long rowIndex);
+	void clearSubTable(long columnIndex, long rowIndex);
+	long getSubTableSize(long columnIndex, long rowIndex);
+	double average(long columnIndex);
+	String toJson();
LongRowSet:
+	public double average() 		!!! FIX in NAtive to return double!

TableView: