@@ -742,22 +742,30 @@ JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeFindAllString(
 
 
 // experimental
-JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeFindSortedInt(
-    JNIEnv *env, jobject, jlong nativeTablePtr, jlong columnIndex, jlong value)
+JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeLowerBoundInt(
+    JNIEnv* env, jobject, jlong nativeTablePtr, jlong columnIndex, jlong value)
 {
     if (!COL_INDEX_VALID(env, TBL(nativeTablePtr), columnIndex)) return 0;
 
     Table* pTable = TBL(nativeTablePtr);
-    size_t pos=0;
-    bool res = pTable->find_sorted_int(S(columnIndex), S(value), pos);
-    return pos;
-    // TODO: we should actually create and return an object with both pos and res...
+    return pTable->lower_bound_int(S(columnIndex), S(value));
+}
+
+
+// experimental
+JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeUpperBoundInt(
+    JNIEnv* env, jobject, jlong nativeTablePtr, jlong columnIndex, jlong value)
+{
+    if (!COL_INDEX_VALID(env, TBL(nativeTablePtr), columnIndex)) return 0;
+
+    Table* pTable = TBL(nativeTablePtr);
+    return pTable->upper_bound_int(S(columnIndex), S(value));
 }
 
 //
 
 JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeDistinct(
-    JNIEnv *env, jobject, jlong nativeTablePtr, jlong columnIndex)
+    JNIEnv* env, jobject, jlong nativeTablePtr, jlong columnIndex)
 {
     Table* pTable = TBL(nativeTablePtr);
     if (!COL_INDEX_VALID(env, pTable, columnIndex))
