@@ -1,3 +1,8 @@
+04-August-2013:
+===============
++ Experimental Table.findSortedLong() replaced by Table.lowerBoundLong() and Table.upperBoundLong() because these provide more flexibility, and it follows similar changes in the core library. (Kristian Spangsege)
+
+
 05-July-2013:
 ============
 + Exception now thrown when calling a method on a closed Group().
